[gd_scene load_steps=7 format=3 uid="uid://cw407654fa6bf"]

[ext_resource type="Script" uid="uid://bnh207wsks4ua" path="res://Scripts/control.gd" id="1_k7axu"]
[ext_resource type="Script" uid="uid://vm3b26k5hr2e" path="res://Scripts/controle_de_monitor.gd" id="2_l5htm"]
[ext_resource type="Script" uid="uid://dprtyjmyqgt8j" path="res://Scripts/importação_de_lista.gd" id="3_cynse"]
[ext_resource type="Script" uid="uid://d2kxyh7tbicst" path="res://Scripts/sorteio.gd" id="4_gemnp"]
[ext_resource type="Script" uid="uid://b7vrg7snkhtom" path="res://Scripts/modelo_json.gd" id="4_ll70y"]
[ext_resource type="Texture2D" uid="uid://dv28uuwrwxoeg" path="res://icon.svg" id="6_ti2jl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k7axu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Esquerda - Direita" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Monitor - Importação" type="VBoxContainer" parent="MarginContainer/Esquerda - Direita"]
layout_mode = 2
script = ExtResource("2_l5htm")

[node name="Monitor" type="VBoxContainer" parent="MarginContainer/Esquerda - Direita/Monitor - Importação"]
layout_mode = 2

[node name="Caixa de Seleção" type="HFlowContainer" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Monitor"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Monitor/Caixa de Seleção"]
layout_mode = 2
text = "Monitor:"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Monitor/Caixa de Seleção"]
unique_name_in_owner = true
layout_mode = 2
item_count = 1
popup/item_0/text = "Opções de Monitores"
popup/item_0/id = 0

[node name="Botões" type="HFlowContainer" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Monitor"]
layout_mode = 2

[node name="Button_Test" type="Button" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Monitor/Botões"]
layout_mode = 2
text = "Testar"

[node name="Button_Apply" type="Button" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Monitor/Botões"]
layout_mode = 2
text = "Aplicar"

[node name="Button_Fechar" type="Button" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Monitor/Botões"]
layout_mode = 2
text = "Fechar"

[node name="Importação" type="VBoxContainer" parent="MarginContainer/Esquerda - Direita/Monitor - Importação"]
layout_mode = 2
script = ExtResource("3_cynse")

[node name="Label" type="Label" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação"]
layout_mode = 2
text = "Importar lista de participantes do sorteio"

[node name="BotõesImportação" type="HFlowContainer" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação"]
layout_mode = 2

[node name="Button_Import" type="Button" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação/BotõesImportação"]
layout_mode = 2
text = "Importar Lista.Json"

[node name="ModeloJSON" type="Container" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação/BotõesImportação"]
layout_mode = 2
script = ExtResource("4_ll70y")

[node name="FileDialog_Save_Modelo" type="FileDialog" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação/BotõesImportação/ModeloJSON"]
unique_name_in_owner = true
access = 2
filters = PackedStringArray("*.json")

[node name="Button_Modelo" type="Button" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação/BotõesImportação/ModeloJSON"]
layout_mode = 2
text = "Modelo"

[node name="Lista - Sorteio" type="VBoxContainer" parent="MarginContainer/Esquerda - Direita/Monitor - Importação"]
layout_mode = 2

[node name="ListaCategorias - Botões" type="HBoxContainer" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Lista - Sorteio"]
layout_mode = 2

[node name="ItemList_Categorias" type="ItemList" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Lista - Sorteio/ListaCategorias - Botões"]
layout_mode = 2
size_flags_horizontal = 3
select_mode = 2

[node name="BotõesSorteio" type="VBoxContainer" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Lista - Sorteio/ListaCategorias - Botões"]
layout_mode = 2
script = ExtResource("4_gemnp")

[node name="Sortear_Todos" type="Button" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Lista - Sorteio/ListaCategorias - Botões/BotõesSorteio"]
layout_mode = 2
size_flags_vertical = 3
text = "Sortear"

[node name="Sortear_Selecionado" type="Button" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Lista - Sorteio/ListaCategorias - Botões/BotõesSorteio"]
layout_mode = 2
text = "Sortear Selecionado"

[node name="ItemList_Itens" type="ItemList" parent="MarginContainer/Esquerda - Direita/Monitor - Importação/Lista - Sorteio"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Esquerda - Direita"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_ti2jl")

[node name="Segunda Tela" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="InfoPopup" type="AcceptDialog" parent="."]

[connection signal="file_selected" from="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação/BotõesImportação/ModeloJSON/FileDialog_Save_Modelo" to="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação/BotõesImportação/ModeloJSON" method="_on_file_dialog_save_modelo_file_selected"]
[connection signal="pressed" from="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação/BotõesImportação/ModeloJSON/Button_Modelo" to="MarginContainer/Esquerda - Direita/Monitor - Importação/Importação/BotõesImportação/ModeloJSON" method="_on_button_modelo_pressed"]
